# VisiLens

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  benchmark.py  build.sh  build_release.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
DOCUMENTATION/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README_es.md  README_ja.md  README_ru.md  README_zh.md  ROADMAP.md
backend/: README.md  core.py  main.py  requirements.txt  test_vd_script.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisSidebar.tsx  ContextMenu.tsx  DataTable.tsx  FilterBar.tsx  HeaderStats.tsx  SelectionBar.tsx
frontend/src/hooks/: useVisiLensSocket.ts
tests/: test_api.py
vdweb/: __init__.py  cli.py  core.py  server.py
vdweb/static/: index.html
vdweb/static/assets/: index-BPHvRr23.css  index-BPhnRj8N.css  index-CNDZT6HA.css  index-CZ0Zp2np.css  index-CniolVwr.js  index-Cq-klTVk.js  index-Cszx39qi.js  index-CxZwJfWD.js  index-D-RIiV6Y.js  index-Dws28tAg.css  index-VNtAtOZT.js  index-aSFk6bQf.js
